feat: add moderations resource and query param support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(openai-cpp
     src/http_client.cpp
     src/utils/base64.cpp
     src/chat.cpp
+    src/moderations.cpp
 )
 
 target_include_directories(openai-cpp
