feat: add files resource list/retrieve/delete support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_library(openai-cpp
     src/chat.cpp
     src/moderations.cpp
     src/responses.cpp
+    src/files.cpp
 )
 
 target_include_directories(openai-cpp
