feat: add basic SSE parsing utilities

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ add_library(openai-cpp
     src/moderations.cpp
     src/responses.cpp
     src/files.cpp
+    src/streaming.cpp
 )
 
 target_include_directories(openai-cpp
