--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(openai-cpp-tests
     ${CMAKE_CURRENT_LIST_DIR}/responses_test.cpp
     ${CMAKE_CURRENT_LIST_DIR}/files_test.cpp
     ${CMAKE_CURRENT_LIST_DIR}/streaming_test.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/chat_test.cpp
 )
 
 target_link_libraries(openai-cpp-tests PRIVATE
