--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(openai-cpp-tests
     ${CMAKE_CURRENT_LIST_DIR}/images_test.cpp
     ${CMAKE_CURRENT_LIST_DIR}/audio_test.cpp
     ${CMAKE_CURRENT_LIST_DIR}/vector_stores_test.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/assistants_test.cpp
 )
 
 target_link_libraries(openai-cpp-tests PRIVATE
