feat: add assistant stream parser

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ add_library(openai-cpp
     src/assistants.cpp
     src/threads.cpp
     src/messages.cpp
+    src/assistant_stream.cpp
     src/run_steps.cpp
     src/runs.cpp
     src/streaming.cpp
