--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -22,6 +22,9 @@ add_executable(openai-cpp-tests
     ${CMAKE_CURRENT_LIST_DIR}/streaming_test.cpp
     ${CMAKE_CURRENT_LIST_DIR}/chat_test.cpp
     ${CMAKE_CURRENT_LIST_DIR}/images_test.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/utils_qs_test.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/batches_test.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/containers_test.cpp
     ${CMAKE_CURRENT_LIST_DIR}/audio_test.cpp
     ${CMAKE_CURRENT_LIST_DIR}/vector_stores_test.cpp
     ${CMAKE_CURRENT_LIST_DIR}/assistants_test.cpp
@@ -30,6 +33,12 @@ add_executable(openai-cpp-tests
     ${CMAKE_CURRENT_LIST_DIR}/assistant_stream_test.cpp
     ${CMAKE_CURRENT_LIST_DIR}/run_steps_test.cpp
     ${CMAKE_CURRENT_LIST_DIR}/runs_test.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/videos_test.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/fine_tuning_test.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/webhooks_test.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/conversations_test.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/moderations_extra_test.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/beta_realtime_test.cpp
 )
 
 target_link_libraries(openai-cpp-tests PRIVATE
