Add response streaming snapshot support and tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ add_library(openai-cpp
     src/threads.cpp
     src/messages.cpp
     src/assistant_stream.cpp
+    src/response_stream.cpp
     src/run_steps.cpp
     src/runs.cpp
     src/streaming.cpp
