--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -45,6 +45,7 @@ add_executable(openai-cpp-tests
     ${CMAKE_CURRENT_LIST_DIR}/azure_test.cpp
     ${CMAKE_CURRENT_LIST_DIR}/beta_realtime_test.cpp
     ${CMAKE_CURRENT_LIST_DIR}/beta_realtime_transcription_test.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/beta_chatkit_test.cpp
     ${CMAKE_CURRENT_LIST_DIR}/beta_threads_test.cpp
     ${CMAKE_CURRENT_LIST_DIR}/uploads_test.cpp
     ${CMAKE_CURRENT_LIST_DIR}/fine_tuning_graders_test.cpp
