--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -49,6 +49,7 @@ add_executable(openai-cpp-tests
     ${CMAKE_CURRENT_LIST_DIR}/beta_threads_test.cpp
     ${CMAKE_CURRENT_LIST_DIR}/uploads_test.cpp
     ${CMAKE_CURRENT_LIST_DIR}/fine_tuning_graders_test.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/evals_test.cpp
 )
 
 target_link_libraries(openai-cpp-tests PRIVATE
